kustomize/front/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dobrodelen-front
  labels:
    app: dobrodelen-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dobrodelen-front
  template:
    metadata:
      labels:
        app: dobrodelen-front
    spec:
      containers:
        - name: dobrodelen-front
          image: dobrodelen-front
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 200Mi
              cpu: 100m
            limits:
              memory: 200Mi
              cpu: 100m
