kustomize/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dobrodelen-front
spec:
  selector:
    app: dobrodelen-front
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
