kustomize/front/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dobrodelen-front-redirect-www
spec:
  redirectRegex:
    regex: ^https?://www.dobrodelen.si/(.*)
    replacement: https://dobrodelen.si/${1}
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dobrodelen-front
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: |
      traefik-redirect-to-https@kubernetescrd,
      cnvos-dobrodelen-front-redirect-www@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dobrodelen.si
        - www.dobrodelen.si
      secretName: dobrodelen-front-tls
  rules:
    - host: dobrodelen.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dobrodelen-front
                port:
                  number: 3000
    - host: www.dobrodelen.si
      http: *http_paths
